--- a/símon/style.css
+++ b/símon/style.css
@@ -1,7 +1,7 @@
 @font-face {
   font-family: "Editorial New Regular";
-  src: url("./font/ppeditorialnew-ultralight-webfont.woff") format("woff2"),
-    url("./font/ppeditorialnew-ultralight-webfont.woff2") format("woff");
+  src: url("./font/editorial_new_regular_400-webfont.woff") format("woff2"),
+    url("./font/editorial_new_regular_400-webfont.woff2") format("woff");
   font-weight: normal;
   font-style: normal;
 }
@@ -26,6 +26,7 @@ html {
   height: 100vh;
   box-sizing: border-box;
   background-color: #fff;
+  overflow-x: hidden;
 }
 
 /* navigatin */
@@ -56,7 +57,9 @@ h2,
 h3 {
   margin: 0px;
   color: black;
-  font-size: 1.5rem;
+  font-size: 1.6rem;
+  letter-spacing: 1px;
+  font-weight: 100;
 }
 
 /* Big btns */
@@ -111,4 +114,8 @@ body:hover > #trailer {
 .border-bottom {
   border-bottom: black 2px solid;
   transition: border 0.6s ease;
+}
+
+a {
+  color: inherit;
 }
