--- a/símon/style.css
+++ b/símon/style.css
@@ -33,6 +33,7 @@ html {
   overflow: hidden;
   position: fixed;
   display: flex;
+  align-items: center;
   width: 100%;
   left: 0;
   top: 0;
@@ -44,15 +45,20 @@ html {
   height: 2.2rem;
   color: black;
   z-index: 100;
+  background-color: white;
+  font-size: 1.1rem;
+  margin: 0px;
+  color: black;
+  /* letter-spacing: 1px; */
 }
 
-.navbar > h1,
-h3 {
-  margin: 0 10px;
+.navbar > h2,
+.navbar > a > h1,
+h2 {
+  margin: 0 8px;
+  font-weight: 100;
 }
 
-nav > h1,
-h2,
 h3 {
   margin: 0px;
   color: black;
@@ -157,11 +163,16 @@ h3 {
   z-index: 999999;
   pointer-events: none;
   opacity: 0;
-  transform: opacity 500ms ease;
+  transition: height 200ms ease, width 200ms ease;
   top: var(--y, 0);
   left: var(--x, 0);
   transform: translate(-50%, -50%);
   mix-blend-mode: difference;
+}
+
+.onInteract {
+  height: clamp(1.2rem, 10vw, 10rem) !important;
+  width: clamp(1.2rem, 10vw, 10rem) !important;
 }
 
 body:hover > #trailer {
