--- a/símon/style.css
+++ b/símon/style.css
@@ -30,7 +30,7 @@ html {
 
 /* navigatin */
 .navbar {
-  overflow: hidden;
+  /* overflow: hidden; */
   position: fixed;
   display: flex;
   align-items: center;
@@ -44,12 +44,11 @@ html {
   background-color: white;
   height: 2.2rem;
   color: black;
-  z-index: 100;
+  z-index: 2;
   background-color: white;
   font-size: 1.1rem;
   margin: 0px;
   color: black;
-  /* letter-spacing: 1px; */
 }
 
 .navbar > h2,
@@ -65,6 +64,10 @@ h3 {
   font-size: 1.6rem;
   letter-spacing: 1px;
   font-weight: 100;
+}
+
+.navbar-content {
+  display: flex;
 }
 
 /* Big btns */
@@ -160,7 +163,7 @@ h3 {
   border-radius: 100%;
   background-color: #fff;
   position: absolute;
-  z-index: 999999;
+  z-index: 100000;
   pointer-events: none;
   opacity: 0;
   transition: height 200ms ease, width 200ms ease;
@@ -168,6 +171,21 @@ h3 {
   left: var(--x, 0);
   transform: translate(-50%, -50%);
   mix-blend-mode: difference;
+}
+
+#trailer-text {
+  opacity: 0;
+  top: var(--y, 0);
+  left: var(--x, 0);
+  position: absolute;
+  z-index: 200000;
+  font-family: "Tex Gyre Heros Regular";
+  display: flex;
+  flex-wrap: nowrap;
+  text-align: center;
+  font-size: 1.6rem;
+  padding: 0.5rem 1.5rem;
+  border-radius: 10rem;
 }
 
 .onInteract {
