--- a/spotify/style.css
+++ b/spotify/style.css
@@ -35,7 +35,7 @@
 }
 
 @font-face {
-  font-family: "Gotham Untra Italic";
+  font-family: "Gotham Ultra Italic";
   src: url("./font/Gotham-UltraItalic.woff2") format("woff2"),
     url("./font/Gotham-UltraItalic.woff") format("woff");
   font-weight: 500;
@@ -136,33 +136,35 @@
 :root {
   --white: rgb(255, 255, 255);
   --black: rgb(0, 0, 0);
+  --light: #b3b3b3;
   --semi-black: rgb(18, 18, 18);
+  --font-normal: "Gotham Medium";
 }
 
 html,
 body {
-  margin: 0;
-  padding: 0;
+  margin: 0px;
   box-sizing: border-box;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
+  display: flex;
 }
 
-/* Nav */
+/* sidebar */
 .sidebar {
   background-color: var(--black);
   display: flex;
   flex-direction: column;
   width: 15%;
   position: fixed;
-  height: 100%;
+  height: 100vh;
   padding: 1.5rem;
   color: var(--white);
-  font-family: "Gotham Medium";
+  font-family: var(--font-normal);
   font-size: 0.875rem;
   overflow: hidden;
+  z-index: 3;
 }
-
 
 .sidebar > div > hr {
   width: 100%;
@@ -173,7 +175,7 @@ body {
 }
 
 .sidebar > div > a[data-folder] {
- justify-content: space-between;
+  justify-content: space-between;
 }
 
 .sidebar > div > a[data-folder="closed"] > img {
@@ -185,14 +187,14 @@ body {
   flex-direction: column;
   gap: 0.875rem;
   width: 100%;
-  margin-bottom: 1.875rem;margin-bottom: 1.875rem;
+  margin-bottom: 1.875rem;
 }
 
-.sidebar>div:nth-child(3) {
+.sidebar > div:nth-child(3) {
   margin-bottom: 0.5rem;
 }
 
-.sidebar>div:nth-child(4) {
+.sidebar > div:nth-child(4) {
   margin-bottom: 0.5rem;
 }
 
@@ -202,6 +204,167 @@ body {
 
 .sidebar-playlists {
   overflow-y: auto;
+  max-height: 100%;
+  height: fit-content;
+  padding-bottom: 90px;
+}
+
+.sidebar-playlists::-webkit-scrollbar {
+  background-color: transparent;
+  width: 0.8rem;
+  position: absolute;
+  right: -10;
+}
+
+.sidebar-playlists::-webkit-scrollbar-thumb {
+  background: rgb(128, 128, 128);
+}
+.sidebar-playlists::-webkit-scrollbar-thumb:hover {
+  background: var(--light);
+}
+
+/* music controls bar */
+.playingbar {
+  width: 100vw;
+  height: auto;
+  position: absolute;
+  bottom: 0;
+  z-index: 5;
+}
+
+.playingbar-content {
+  background-color: var(--semi-black);
+  padding: 0 16px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  height: 90px;
+}
+
+.now-playing {
+  display: flex;
+  align-items: center;
+  min-width: 180px;
+  width: 30%;
+}
+
+.current-song-title {
+  line-height: 0.5rem;
+  color: var(--white);
+  font-family: var(--font-normal);
+  font-size: 0.8rem;
+  margin: 0 14px;
+}
+
+.current-song-title > p:last-child {
+  color: var(--light);
+  font-size: 0.6rem;
+}
+
+.now-playing > img {
+  width: 56px;
+  height: 56px;
+  overflow: hidden;
+  vertical-align: bottom;
+}
+
+.controls {
+  max-width: 722px;
+  width: 40%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.music-progress {
+  display: flex;
+  width: 100%;
+  flex-direction: row;
+  align-items: center;
+}
+
+.music-progress > .progress {
+  background-color: var(--light);
+  height: 4px;
+  width: 100%;
+  border-radius: 1rem;
+}
+
+.music-progress > p {
+  margin: 5px;
+  color: var(--light);
+  font-family: "Gotham Light";
+  font-size: 0.8rem;
+}
+
+.volume {
+  min-width: 180px;
+  width: 30%;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
+
+.volume > .progress {
+  background-color: var(--light);
+  height: 4px;
+  width: 6rem;
+  border-radius: 1rem;
+}
+
+.volume > button {
+  display: flex;
+  align-items: center;
+}
+
+.volume > button:hover {
+  transform: scale(1.04);
+}
+
+.playbtn {
+  background-color: var(--white);
+  border-radius: 1rem;
+}
+
+.playbtn:hover {
+  transform: scale(1.08);
+}
+
+.btn-controls {
+  display: flex;
+  gap: 8px;
+}
+
+.btn-controls > button > img {
+  vertical-align: bottom;
+}
+
+.btn-controls > button {
+  position: relative;
+}
+
+.btn-controls > button[data-toggled="true"]::after {
+  background-color: #19c658;
+  border-radius: 50%;
+  bottom: 0;
+  display: block;
+  content: "";
+  height: 4px;
+  left: 50%;
+  position: absolute;
+  transform: translateX(-50%);
+  width: 4px;
+  display: block;
+}
+
+.btn-controls > button[data-toggled="false"] > img {
+  filter: invert(100%) sepia(0%) saturate(0%) hue-rotate(333deg)
+    brightness(104%) contrast(102%);
+}
+
+.btn-controls > button[data-toggled="true"] > img {
+  filter: invert(62%) sepia(37%) saturate(3051%) hue-rotate(94deg)
+    brightness(98%) contrast(80%);
 }
 
 /* util */
@@ -239,4 +402,17 @@ a {
 
 .liked-songs {
   background: linear-gradient(135deg, #450af5, #c4efd9);
+}
+
+a:hover,
+button:hover {
+  opacity: 1;
+}
+
+button {
+  background-color: transparent;
+  border: none;
+  width: 1.7rem;
+  height: 1.7rem;
+  opacity: 0.7;
 }
