--- a/spotify/style.css
+++ b/spotify/style.css
@@ -367,6 +367,68 @@ body {
     brightness(98%) contrast(80%);
 }
 
+/* top nav */
+.topnav {
+  width: 100vw;
+  height: auto;
+  position: absolute;
+  top: 0;
+  z-index: 1;
+}
+
+.topnav-content {
+  background: var(--semi-black);
+  padding: 0 16px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  height: 65px;
+  padding-left: 15rem;
+}
+
+.topnav-controls {
+  display: flex;
+  align-items: center;
+  min-width: 180px;
+  width: 55%;
+  overflow: hidden;
+  gap: 0.875rem;
+  height: 100%;
+}
+
+.topnav-controls > .topnav-nav {
+  width: 20px;
+  height: 20px;
+  min-height: 20px;
+  min-width: 20px;
+  overflow: hidden;
+  vertical-align: bottom;
+  background: var(--black);
+  border-radius: 10rem;
+  padding: 0.5rem;
+}
+
+.topnav-controls > .topnav-search-ico {
+  width: 25px;
+  height: 25px;
+  min-height: 25px;
+  min-width: 25px;
+  position: absolute;
+  display: inline-block;
+  left: 22rem;
+}
+
+.topnav-controls > input {
+  width: 100%;
+  border-radius: 10rem;
+  outline: none;
+  border: none;
+  height: 20px;
+  padding: 0.5rem;
+  padding-left: 3rem;
+  display: inline-block;
+}
+
 /* util */
 a {
   opacity: 0.7;
@@ -382,6 +444,8 @@ a {
 .svg-size {
   width: 1.5rem;
   height: 1.5rem;
+  filter: invert(100%) sepia(0%) saturate(0%) hue-rotate(333deg)
+    brightness(104%) contrast(102%);
 }
 
 .folder-arrow {
@@ -415,4 +479,8 @@ button {
   width: 1.7rem;
   height: 1.7rem;
   opacity: 0.7;
+}
+
+.active {
+  opacity: 1 !important;
 }
